upload full cart

--- a/app-client/src/app/single-restaurant/single-restaurant.component.html
+++ b/app-client/src/app/single-restaurant/single-restaurant.component.html
@@ -101,38 +101,7 @@
         </div>
         <div class="right">
             
-            <h1 style="margin:0">Cart</h1>
-            <div>from <span style="font-weight: 600; color: #5d8ed5;">Name of restaurant</span></div>
-            <div class="total-items">3 ITEMS</div>
-            <ul class="items">
-                <li class="list" *ngFor="let item of itemList">
-                    <div class="item-name">
-                        <img src="https://img.icons8.com/color/15/000000/vegetarian-food-symbol.png">
-                        <span style="margin-left: 10px;">Nawabi Paneer Tikka</span>
-                    </div>
-                    <div class="add-remove-box">
-                        <mat-icon class="star-icon" fontSet="material-icons-outlined">remove</mat-icon>
-                        <span>5</span>
-                        <mat-icon class="star-icon" fontSet="material-icons-outlined">add</mat-icon>
-                    </div>
-                    <div style="margin-left: 10px">₹ 1396</div>
-                </li>
-            </ul>
-            <div class="subtotal">
-                <div class="total-amount-box">
-                    <div>Subtotal</div>
-                    <div>
-                        ₹ 947
-                    </div>
-
-                </div>
-                <div class="extra-charges-text">Extra charges may apply</div>
-                <div class="checkout-button-box">
-                    <button mat-raised-button class="checkoutButton">CHECKOUT <mat-icon class="star-icon"
-                            style="margin-top: 2px;" fontSet="material-icons-outlined">arrow_right_alt</mat-icon>
-                    </button>
-                </div>
-            </div>
+            <app-cart-details-for-rest></app-cart-details-for-rest>
 
         </div>
     </div>
