--- a/app-client/src/app/shared/header/cart-popover/cart-popover.component.html
+++ b/app-client/src/app/shared/header/cart-popover/cart-popover.component.html
@@ -1,36 +1,33 @@
-
-        <div class="flex-container">
+<div class="cart-popover">
+    <div class="main-container">
+        <div class="restaurant-box" >
             <div>
                 <img height="66" width="66" alt=""
                     src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_132,h_132,c_fill/oyusdq7j4phsavmal7n0">
             </div>
-            <div class="mx-2">
+            <div class="restaurant-description">
                 <div class="name">Name of Restaurant</div>
                 <div class="address">address</div>
             </div>
         </div>
-        <hr/>
         <div class="item-info-box">
             <ul class="items">
                 <li class="list" *ngFor="let item of itemList">
-                    <div class="flex-container mb-2">
-                        <img height="33" width="33" alt="" src="{{item.imageURL}}">
-                        <div>
-                            <span style="margin-left: 10px;">{{item.fullName}}</span>
-                            <div style="margin-left: 10px">{{item.quantity}} x {{item.price | currency: 'VND'}}</div>
-                        </div>                       
+                    <div class="item-name">
+                        <img src="https://img.icons8.com/color/15/000000/vegetarian-food-symbol.png">
+                        <span style="margin-left: 10px;">{{item.fullName}} x {{item.quantity}}</span>
                     </div>
-                   
+                    <div style="margin-left: 10px">{{ item.quantity * item.price | currency: 'VND'}}</div>
                 </li>
             </ul>
         </div>
-        <hr/>
-        <div class="flex-container mb-2">
+        <div class="subtotal-box">
             <div>Sub Total</div>
             <div>{{this.totalPrice | currency: 'VND'}}</div>
         </div>
         <div class="checkout-button-box">
-            <button mat-raised-button class="checkoutButton">CHECKOUT <mat-icon class="star-icon"
-                    style="margin-top: 2px;" fontSet="material-icons-outlined">arrow_right_alt</mat-icon>
-            </button>
+            <button mat-raised-button class="checkoutButton">CHECKOUT</button>
         </div>
+    </div>
+
+</div>
