update source code

--- a/app-client/src/app/cart/cart.component.html
+++ b/app-client/src/app/cart/cart.component.html
@@ -181,7 +181,7 @@
                             <h1>Choose payment method</h1>
 
                         </div>
-                        <div class="second-view">
+                        <div class="second-view" style="background-color: white;">
                             <div class="body" style="padding: 0;">
                                 <div class="row" style=" align-items:flex-end" >
                                     <div class="col-md-6">
