--- a/app-client/src/app/single-restaurant/single-restaurant.component.html
+++ b/app-client/src/app/single-restaurant/single-restaurant.component.html
@@ -14,7 +14,9 @@
                 <div class="rating-box">
                     <div class="box">
                         <div class="upper-box">
-                            <mat-icon class="star-icon" fontSet="material-icons-outlined">star</mat-icon>
+                            <ngx-material-rating [color]="color" [disabled]="false" [dense]="2"
+                                [readonly]="true" [(ngModel)]="restaurant.rate" [max]="5">
+                            </ngx-material-rating>
                             <span>4.1</span>
                         </div>
                         <div class="lower-box">
