update function rating for restaurant

--- a/app-client/src/app/single-restaurant/single-restaurant.component.html
+++ b/app-client/src/app/single-restaurant/single-restaurant.component.html
@@ -15,13 +15,13 @@
                     <div class="box">
                         <div class="upper-box">
                             <ngx-material-rating [color]="color" [disabled]="false" [dense]="2"
-                                [readonly]="true" [(ngModel)]="restaurant.rate" [max]="5">
+                                [readonly]="true" [(ngModel)]="restaurant.rateTotal" [max]="5">
                             </ngx-material-rating>
-                            <span>4.1</span>
+                            <span>{{restaurant.rateTotal}}</span>
                         </div>
                         <div class="lower-box">
                             <span>
-                                500+ Rating
+                                {{restaurant.rateCount}} Rating
                             </span>
                         </div>
 
