--- a/app-client/src/app/home/home.component.html
+++ b/app-client/src/app/home/home.component.html
@@ -56,7 +56,7 @@
                     <div class="other">
                         <div class="rating">
                             <mat-icon class="star-icon">star</mat-icon>
-                            <span class="rate">5{{restaurant.rate}}</span>
+                            <span class="rate">{{restaurant.rateTotal}}</span>
                         </div>
                         <div>&#8226;</div>
                         <div>32 MINS</div>
