--- a/app-client/src/app/search/search.component.html
+++ b/app-client/src/app/search/search.component.html
@@ -16,11 +16,11 @@
             </mat-form-field>
 
             <div class="result-box">
-                <mat-tab-group animationDuration="2000ms" (selectedTabChange)="tabChanged($event)">
+                <mat-tab-group animationDuration="1000ms" (selectedTabChange)="tabChanged($event)">
                     <mat-tab label="RESTAURANT">
                         <app-tab-restaurant></app-tab-restaurant>
                     </mat-tab>
-                    <mat-tab label="DISHES">
+                    <mat-tab label="FOOD">
                         <app-tab-dishes></app-tab-dishes>
                     </mat-tab>
                   </mat-tab-group>        
