--- a/app-client/src/app/single-restaurant/single-restaurant.component.html
+++ b/app-client/src/app/single-restaurant/single-restaurant.component.html
@@ -3,12 +3,12 @@
         <div class="header-container container" style="box-sizing: content-box;width: 100%;">
             <div class="img-box">
                 <img mat-card-image style="width: 100%;" alt=""
-                    src="{{this.restaurant?.imageURL}}">
+                    src="{{this.restaurant?.imageURL}} ">
             </div>
             <div class="description-box">
                 <div>
                     <h1 class="name">{{this.restaurant?.fullName}}</h1>
-                    <p *ngIf="this.restaurant?.address != undefined" style="margin-bottom: 0;" class="total-items">{{ this.restaurant.address.street }}, {{ this.restaurant.address.ward }}, {{ this.restaurant.address.district }}</p>
+                    <p *ngIf="this.restaurant?.address != undefined" style="margin-bottom: 0;" class="total-items">{{ this.restaurant.address?.street }}, {{ this.restaurant.address?.ward }}, {{ this.restaurant.address?.district }}</p>
                     <p *ngIf="this.restaurant?.address == undefined" style="margin-bottom: 0;" class="notfound-total-items">Address is updating...</p>
                 </div>
                 <div class="rating-box">
