--- a/app-client/src/app/cart/cart-detail-check-out/cart-detail-check-out.component.html
+++ b/app-client/src/app/cart/cart-detail-check-out/cart-detail-check-out.component.html
@@ -40,20 +40,24 @@
             <div style="margin-left: 10px">{{ item.price | currency: 'VND'}}</div>
         </li>
     </ul>
-    <div class="items">
-        <div class="">
-            <div class="d-flex justify-content-between">
-                <span style="width: 100px;"></span>
-                <span style="font-size: 14; font-weight: 400;">{{ distance ? distance : 1 }} KM </span> 
-                <span>{{ fee_shipping | currency: 'VND'}}</span>
-                
+    <div class="subtotal">
+        <div class="total-amount-box mb-4">
+            <div>Order Price</div>
+            <div>
+                {{this.totalPrice | currency: 'VND'}}
+            </div>
+        </div>
+    </div>
+    <div class="subtotal">
+            <div>Shipping Money
+                <span style="font-size: 13; font-weight: 500;">(  {{ 12000 | currency: 'VND'}}/Km  )</span>
             </div>
             <div class="d-flex justify-content-between my-3">
-                <div>Shipping Money</div>
-                <div>{{ distance * fee_shipping | currency: 'VND'}}</div>
+                <span style="width: 100px;"></span>
+                <span style="font-size: 13; font-weight: 500;">{{ distance ? distance : 1 }} Km  </span> 
+                <span>{{ ((distance >= 1)? (fee_shipping * distance) : fee_shipping )| currency: 'VND'}}</span>
+                
             </div>
-
-        </div>
     </div>
     <div class="subtotal">
         <div class="total-amount-box">
